crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__remove_scripts__remove_scripts-4.snap
---
source: crates/oxvg_optimiser/src/jobs/remove_scripts.rs
expression: "test_config(r#\"{ \"removeScripts\": true }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 100 100\" version=\"1.1\">\n  <script>alert('uwu')</script>\n  <g onclick=\"alert('uwu')\">\n    <text y=\"10\">uwu</text>\n  </g>\n  <a href=\"javascript:(() => { alert('uwu') })();\">\n    <text y=\"20\">uwu</text>\n  </a>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" version="1.1">
    <g>
        <text y="10">uwu</text>
    </g>
    <text y="20">uwu</text>
</svg>
