crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__remove_scripts__remove_scripts-5.snap
---
source: crates/oxvg_optimiser/src/jobs/remove_scripts.rs
expression: "test_config(r#\"{ \"removeScripts\": true }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:uwu=\"http://www.w3.org/1999/xlink\" viewBox=\"0 0 100 100\" version=\"1.1\">\n  <a href=\"javascript:(() => { alert('uwu') })();\">\n    <text y=\"20\">uwu</text>\n  </a>\n  <a uwu:href=\"javascript:(() => { alert('uwu') })();\">\n    <text y=\"30\">uwu</text>\n  </a>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg" xmlns:uwu="http://www.w3.org/1999/xlink" viewBox="0 0 100 100" version="1.1">
    <text y="20">uwu</text>
    <text y="30">uwu</text>
</svg>
