crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__remove_scripts__remove_scripts-6.snap
---
source: crates/oxvg_optimiser/src/jobs/remove_scripts.rs
expression: "test_config(r#\"{ \"removeScripts\": true }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:uwu=\"http://www.w3.org/1999/xlink\" viewBox=\"0 0 100 100\">\n  <a href=\"data:text/html;base64,PHNjcmlwdD5hbGVydCgxKTwvc2NyaXB0Pg==\">\n    <text y=\"10\">HTML</text>\n  </a>\n  <a uwu:href=\"DATA:application/xhtml+xml;charset=utf-8,%3Cscript%3Ealert(1)%3C/script%3E\">\n    <text y=\"20\">XHTML</text>\n  </a>\n  <a href=\"data:image/svg+xml;base64,PHN2ZyBvbmxvYWQ9ImFsZXJ0KDEpIi8+\">\n    <text y=\"30\">SVG</text>\n  </a>\n  <a href=\"data:image/png;base64,iVBORw0KGgo=\">\n    <text y=\"40\">PNG</text>\n  </a>\n  <a href=\"vbscript:msgbox(1)\">\n    <text y=\"50\">VBScript</text>\n  </a>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg" xmlns:uwu="http://www.w3.org/1999/xlink" viewBox="0 0 100 100">
    <text y="10">HTML</text>
    <text y="20">XHTML</text>
    <text y="30">SVG</text>
    <a href="data:image/png;base64,iVBORw0KGgo="><text y="40">PNG</text></a>
    <text y="50">VBScript</text>
</svg>
