crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__remove_scripts__remove_scripts.snap
---
source: crates/oxvg_optimiser/src/jobs/remove_scripts.rs
expression: "test_config(r#\"{ \"removeScripts\": true }\"#,\nSome(r#\"<?xml version=\"1.0\" encoding=\"utf-16\"?>\n<svg version=\"1.1\" id=\"Layer_1\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" x=\"0px\" y=\"0px\" viewBox=\"0 0 100 100\" style=\"enable-background:new 0 0 100 100;\" xml:space=\"preserve\">\n    <script></script>\n    <circle class=\"st0\" cx=\"50\" cy=\"50\" r=\"50\" />\n</svg>\"#),)?"
---
<?xml version="1.0" encoding="utf-16"?>
<svg xmlns="http://www.w3.org/2000/svg" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 100 100" style="enable-background:new 0 0 100 100;" xml:space="preserve">
    <circle class="st0" cx="50" cy="50" r="50"/>
</svg>
